# micro-app

./: LICENSE  README.md  sqlite_polyline_map.html
ai-text-editor/: .env.example  .gitignore  CLAUDE.md  README.md  backend.py  index.html  pyproject.toml  script.js  styles.css
ai-text-editor/components/: AIService.js  CustomPromptsManager.js  EditorManager.js  FileSystemManager.js  NotificationManager.js  PromptsManager.js  SettingsManager.js  TextAnalysisManager.js  UIManager.js
